# realworld-axum-api

./: .env.example  .gitignore  Cargo.toml
.trae/documents/: user_system_improvement_plan.md
migrations/: 20260226083104_create_users_table.sql  20260228080504_create_email_verification_tokens.sql  20260228080534_add_email_verified_to_users.sql  20260301071952_create_password_reset_tokens.sql  20260302044500_create_refresh_tokens_table.sql  20260302052658_change_refresh_token_table_to_timestamptz.sql  20260302091126_add_role_to_users.sql
src/: lib.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  role.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: rate_limit.rs
src/models/: email_verification_token.rs  mod.rs  password_reset_token.rs  refresh_token.rs  user.rs
src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs  password_reset_schemas.rs  user_schemas.rs
src/services/: email_service.rs  mod.rs
src/utils/: mod.rs  token_generator.rs
