[package]
name = "realworld-axum-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "realworld_axum_api"
path = "src/lib.rs"

[[bin]]
name = "realworld-axum-api"
path = "src/main.rs"

[dependencies]
# Core web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Auth
bcrypt = "0.18"
jsonwebtoken = "10.3"
async-trait = "0.1"

# Email sending (we'll use this later)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "hostname"] }